--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exam-api",
+  "name": "zammad-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,13 +14,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fast-levenshtein": "^3.0.0",
     "firebase-admin": "^12.1.0",
+    "node-fetch": "^3.3.2",
     "redis": "^4.6.14"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/fast-levenshtein": "^0.0.4",
     "@types/node": "^20.12.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
