--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@types/fast-levenshtein": "^0.0.4",
     "@types/jsdom": "^21.1.6",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.14.2",
