--- a/api/package.json
+++ b/api/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.5",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "build": "tsc && tsc-alias",
+    "dev": "tsx --watch src/index.ts",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^17.2.2",
     "fast-levenshtein": "^3.0.0",
-    "firebase-admin": "^12.1.0",
-    "node-fetch": "^3.3.2",
-    "redis": "^4.6.14"
+    "fastify": "^5.6.0",
+    "redis": "^5.8.2",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.19",
     "@types/fast-levenshtein": "^0.0.4",
-    "@types/node": "^20.12.12",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "@types/node": "^24.3.1",
+    "typescript": "^5.9.2"
   }
 }
