--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "fast-levenshtein": "^3.0.0",
     "fastify": "^5.6.0",
     "redis": "^5.8.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.5"
   },
   "devDependencies": {
