--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/fast-levenshtein": "^0.0.4",
     "@types/jsdom": "^21.1.7",
     "@types/marked": "^6.0.0",
