--- a/package.json
+++ b/package.json
@@ -11,26 +11,30 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "highlight.js": "^11.11.1",
-    "marked-highlight": "^2.2.2",
-    "next": "^15.5.6",
-    "pdfjs-dist": "^5.4.296",
+    "marked-highlight": "^2.2.3",
+    "next": "16.0.3",
+    "pdfjs-dist": "^5.4.394",
     "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.15",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/fast-levenshtein": "^0.0.4",
     "@types/jsdom": "^27.0.0",
     "@types/marked": "^6.0.0",
-    "@types/node": "^24.9.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.38.0",
-    "eslint-config-next": "^15.5.6",
-    "tailwindcss": "^4.1.15",
+    "@types/node": "^24.10.1",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.3",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3"
   }
 }
