--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   dizambee_ui:
     container_name: dizambee_ui
+    image: dizambee_ui
     restart: always
     build:
       context: .
@@ -15,6 +16,7 @@ services:
 
   dizambee_api:
     container_name: dizambee_api
+    image: dizambee_api
     restart: always
     build:
       context: ./api
