Removed ui and updated api structure

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,5 @@
 # Node image with Alpine Linux
-FROM node:20-alpine
+FROM node:alpine
 
 # Installs Python
 RUN apk add --no-cache python3 make g++
@@ -15,9 +15,6 @@ RUN npm install
 
 # Copies the rest of the API source code
 COPY . .
-
-# Builds the distributable
-RUN npm run build
 
 # Exposes port 8080
 EXPOSE 8080
