--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "dizambee-api",
-  "version": "1.0.5",
-  "main": "index.js",
+  "name": "dizambee_api",
+  "version": "2.0.0",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "tsc && tsc-alias",
-    "dev": "tsx --watch src/index.ts",
-    "start": "node dist/index.js"
+    "start": "node src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Teknisk Komité - Login - Linjeforeningen for IT",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -16,9 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "fast-levenshtein": "^3.0.0",
-    "fastify": "^5.6.2",
-    "tsc-alias": "^1.8.16",
-    "tsx": "^4.21.0"
+    "fastify": "^5.6.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
